--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Michael Sayapin",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.8.0",
+    "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.7.1"
   }
 }
