--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "intro to react v7",
   "main": "index.js",
   "scripts": {
+    "dev": "parcel src/index.html",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,html}\"",
     "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,css,html}\"",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\""
@@ -13,6 +14,15 @@
   "devDependencies": {
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
-    "prettier": "^2.7.1"
-  }
+    "parcel": "^2.7.0",
+    "prettier": "^2.7.1",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "browserslist": [
+    "last 2 chrome versions"
+  ]
 }
