--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "parcel src/index.html",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,html}\"",
     "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,css,html}\"",
-    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\""
+    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
+    "prepare": "husky install"
   },
   "author": "Michael Sayapin",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^8.0.2",
     "parcel": "^2.7.0",
     "prettier": "^2.7.1",
     "process": "^0.11.10"
