--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
-    "@tailwindcss/forms": "^0.4.0",
-    "autoprefixer": "^10.4.2",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
@@ -24,10 +22,8 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^8.0.2",
     "parcel": "^2.7.0",
-    "postcss": "^8.4.6",
     "prettier": "^2.7.1",
-    "process": "^0.11.10",
-    "tailwindcss": "^3.0.22"
+    "process": "^0.11.10"
   },
   "dependencies": {
     "react": "^17.0.2",
