--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,html}\"",
     "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,css,html}\"",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "build": "parcel build",
+    "start": "npm -s run build && node dist/backend/index.js"
   },
   "author": "Michael Sayapin",
   "license": "ISC",
@@ -26,11 +28,30 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "express": "^4.17.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1"
   },
   "browserslist": [
     "last 2 chrome versions"
-  ]
+  ],
+  "targets": {
+    "frontend": {
+      "source": [
+        "src/index.html"
+      ],
+      "publicUrl": "/frontend"
+    },
+    "backend": {
+      "source": [
+        "server/index.js"
+      ],
+      "optimize": false,
+      "context": "node",
+      "engines": {
+        "node": ">=14"
+      }
+    }
+  }
 }
