--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "parcel src/index.html",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,html}\"",
     "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,css,html}\"",
-    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
+    "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --quiet",
     "prepare": "husky install"
   },
   "author": "Michael Sayapin",
@@ -16,8 +16,11 @@
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
