refactor results and add a type check script

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,css,html}\"",
     "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,css,html}\"",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --quiet",
+    "type:check": "tsc --noEmit",
     "prepare": "husky install"
   },
   "author": "Michael Sayapin",
