--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.24",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "eslint": "^8.8.0",
@@ -30,12 +31,15 @@
     "parcel": "^2.7.0",
     "prettier": "^2.7.1",
     "process": "^0.11.10",
+    "typesafe-actions": "^5.1.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1"
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
+    "redux": "^4.1.2"
   },
   "browserslist": [
     "last 2 chrome versions"
