--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,css,html}\"",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --quiet",
     "type:check": "tsc --noEmit",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "author": "Michael Sayapin",
   "license": "ISC",
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/preset-env": "^7.20.2",
+    "@testing-library/react": "^12.1.3",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.24",
@@ -28,6 +32,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^8.0.2",
+    "jest": "^27.5.1",
     "parcel": "^2.7.0",
     "prettier": "^2.7.1",
     "process": "^0.11.10",
