--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
+  "presets": [
+    "@babel/preset-typescript",
+    ["@babel/preset-env", { "targets": { "node": "current" } }],
+    ["@babel/preset-react", { "runtime": "automatic" }]
+  ],
   "plugins": ["@babel/plugin-proposal-class-properties"],
   "env": {
     "test": {
