--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "parcel": "^2.7.0",
     "prettier": "^2.7.1",
     "process": "^0.11.10",
+    "react-test-renderer": "^17.0.2",
     "typesafe-actions": "^5.1.0",
     "typescript": "^4.5.5"
   },
