--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "type:check": "tsc --noEmit",
     "prepare": "husky install",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:coverage:open-report": "open coverage/lcov-report/index.html"
   },
   "author": "Michael Sayapin",
   "license": "ISC",
