--- a/package.json
+++ b/package.json
@@ -9,12 +9,21 @@
     "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,css,html}\"",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --quiet",
     "type:check": "tsc --noEmit",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:coverage:open-report": "open coverage/lcov-report/index.html"
   },
   "author": "Michael Sayapin",
   "license": "ISC",
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@testing-library/react": "^12.1.3",
+    "@testing-library/react-hooks": "^7.0.2",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.24",
@@ -28,9 +37,12 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^8.0.2",
+    "jest": "^27.5.1",
+    "jest-fetch-mock": "^3.0.3",
     "parcel": "^2.7.0",
     "prettier": "^2.7.1",
     "process": "^0.11.10",
+    "react-test-renderer": "^17.0.2",
     "typesafe-actions": "^5.1.0",
     "typescript": "^4.5.5"
   },
@@ -43,5 +55,11 @@
   },
   "browserslist": [
     "last 2 chrome versions"
-  ]
+  ],
+  "jest": {
+    "automock": false,
+    "setupFiles": [
+      "./src/setupJest.ts"
+    ]
+  }
 }
